# BreakingCycles

./: CMakeLists.txt  COPYING.md  ExactMain.cpp  HeuristicMain.cpp  LICENSE  README.md  main.cpp
MFVS/algorithms/: CycleAlgorithms.cpp  CycleAlgorithms.h  Dinics.cpp  Dinics.h  SCC.cpp  SCC.h  TopologicalSorting.cpp  TopologicalSorting.h
MFVS/exact/: BranchAndBoundOne.cpp  BranchAndBoundOne.h  BranchBound.cpp  BranchBound.h  BranchBoundNaive.cpp  BranchBoundNaive.h  FPT_one.cpp  FPT_one.h  SimpleBranchBound.cpp  SimpleBranchBound.h
MFVS/heuristic/: CycleHeuristic.cpp  CycleHeuristic.h  DemetrescuFinocchi.cpp  DemetrescuFinocchi.h  EvolutionaryRandomized.cpp  EvolutionaryRandomized.h  EvolutionarySCC.cpp  EvolutionarySCC.h  FindCycle.cpp  FindCycle.h  Greedy.cpp  Greedy.h  MakeMinimal.cpp  MakeMinimal.h  MakeMinimalSCC.cpp  MakeMinimalSCC.h  MakeMinimalSCCwithSorting.cpp  MakeMinimalSCCwithSorting.h  MakeMinimalWIthReduction.cpp  MakeMinimalWIthReduction.h  MakeMinimalWithSorting.cpp  MakeMinimalWithSorting.h  Random.cpp  Random.h  SCCGreedy.cpp  SCCGreedy.h  SCCRandom.cpp  SCCRandom.h  Schikowski.cpp  Schikowski.h  fvs_Max_Degree.cpp  fvs_Max_Degree.h
MFVS/include/: graph.cpp  graph.h  graph_flow.cpp  graph_flow.h  subgraph.cpp  subgraph.h
MFVS/io/: graph_io.cpp  graph_io.h
NewMFVS/algorithms/: CycleAlgorithms.cpp  CycleAlgorithms.h  SCC.cpp  SCC.h
NewMFVS/exact/: SimpleBranchBound.cpp  SimpleBranchBound.h
NewMFVS/heuristic/: Sinkhorn.cpp  (+9 more)
app/: BreakingCycleHeuristic.cpp  Makefile
verifier/: MySolution_e_001.txt  e_001_solution  mySolutionEvo.txt  verifier
(+4 files in other folders)
